vertical align fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -153,6 +153,15 @@ a[target="_blank"]::after {
   opacity: 0.8;*/
 }
 
+/* Vertically center arrow next to images */
+a[href*="://"]:has(img)::after,
+a[target="_blank"]:has(img)::after,
+a[href*="://"]:has(picture)::after,
+a[target="_blank"]:has(picture)::after {
+  vertical-align: middle;
+  display: inline-block;
+}
+
 /* Remove underline for external links containing images */
 a[href*="://"] img,
 a[target="_blank"] img,
